1998-01-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm -_update_]):
	Checks to see that there is still a displayWindow before
	attempting the draw it.
	([MousetrapObserverSwarm -_updateMousetraps_:]): New method that
	draws all the mousetraps unless there isn't a display window (the
	argument), and sets a trap's display widget.
	([MousetrapObserverSwarm -_displayWindowDeath_:]): New method
	called on destruction of display windows.  Has the effect of
	clearing all the display widgets.
	([MousetrapObserverSwarm -buildObjects]): Call
	enableDestroyNotification using our _displayWindowDeath_ as a
	handler.  Call _updateMousetraps_ (code that was inline).
	([MousetrapObserverSwarm -buildActions]): Use action that
	calls our _update_ instead of displayWindow's drawSelf.

1998-01-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MousetrapModelSwarm.m ([MousetrapModelSwarm -activateIn:]): Use
	CREATE_ARCHIVED_PROBE_DISPLAY to create probe display for
	modelActCont.

	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm -buildObjects]): 
	Likewise, but for mousetrapModelSwarm and MousetrapObserverSwarm.
	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm -activateIn:]): 
	Likewise, but for observerActCont.

	* Makefile (SWARMHOME): Don't define if already defined.  Default is
	swarm-1.0.5.

	* MousetrapModelSwarm.m: Use setWindowGeometryRecordName version
	of createProbeDisplayFor for the model activity controller.

	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm -buildObjects]): 
	Likewise for mousetrapModelSwarm, mousetrapObserverSwarm,
	and the observer activity controller.
	Call setWindowGeometryRecordName for triggerGraph, and mousetrapWorld.

	* MousetrapModelSwarm.[hm]: Reformatting throughout.
	* MousetrapObserverSwarm.[hm]: Likewise.
	* MousetrapBatchSwarm.[hm]: Likewise.

1997-12-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MousetrapObserverSwarm.m: Send doTkEvents to actionCache, not