@@ -1,3 +1,11 @@
+1998-01-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm
+	-buildObjects]): Use SET_WINDOW_GEOMETRY_RECORD_NAME for
+	triggerGraph and displayWindow.
+
+	* main.m (main): Likewise, but for theTopLevelSwarm.
+
 1998-01-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm -_update_]):
